Class 12 with a chart, but no data

--- a/class-12/demo/charts-clicktracker/styles/style.css
+++ b/class-12/demo/charts-clicktracker/styles/style.css
@@ -67,7 +67,7 @@ section img:hover {
 /* once voting ends */
 section.no-voting img:hover {
   border: 5px solid transparent;
-  cursor: none;
+  cursor: wait;
 }
 
 
